[project]
name = "distributed-task-system"
version = "0.1.0"
description = "A distributed task queue system using Python and Redis Streams"
authors = [
    {name = "Siddharth Bariya", email = "sba.workspace@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "redis>=5.0.0",
    "rich>=10.0.0; extra == 'dashboard'"
]

[project.optional-dependencies]
dashboard = ["rich>=10.0.0"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
